apps/science/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dask-dashboard
  namespace: science
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
    argocd.argoproj.io/sync-wave: '3'
spec:
  ingressClassName: nginx
  rules:
  - host: dask.quasarlab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lsdb-cluster-scheduler
            port:
              number: 8787
